added for 4 stocks

--- a/script.ipynb
+++ b/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,6 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, BatchNormalization, Conv1D, Flatten, MaxPooling1D, LSTM\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint, TensorBoard\n",
-    "from keras.wrappers.scikit_learn import KerasRegressor\n",
     "from keras.models import load_model\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import yfinance as yf\n",
@@ -24,10 +23,10 @@
     "import seaborn as sns\n",
     "from algorithm import DualSMASignal\n",
     "\n",
-    "default_data = pd.read_csv(\"../Datasets/SPY_raw.csv\",\n",
+    "default_data = pd.read_csv(\"Datasets/SPY_raw.csv\",\n",
     "                           index_col=\"Date\", parse_dates=True)\n",
     "\n",
-    "default_new_data = pd.read_csv(\"../Datasets/SPY_input.csv\",)\n",
+    "default_new_data = pd.read_csv(\"Datasets/SPY_input.csv\",)\n",
     "\n",
     "\n",
     "class AlgoTrader():\n",
@@ -376,6 +375,131 @@
     "        return total_profit\n",
     "\n",
     "        # Calculate Sharpe Ratio\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_training_data(ticker, startdate=datetime.datetime(1993, 1, 1),\n",
+    "                       enddate=datetime.datetime(2023, 1, 1)):\n",
+    "\n",
+    "    GetData = yf.download(ticker, start=startdate, end=enddate)\n",
+    "    df = pd.DataFrame(GetData)\n",
+    "    df.index = df.index.strftime('%Y-%m-%d')\n",
+    "    df = df.sort_index()\n",
+    "\n",
+    "    # Build Columns\n",
+    "    df = df.assign(\n",
+    "        SMA_5=df['Close'].rolling(5).mean(),\n",
+    "        SMA_20=df['Close'].rolling(20).mean(),\n",
+    "        SMA_50=df['Close'].rolling(50).mean(),\n",
+    "        SMA_252=df['Close'].rolling(252).mean(),\n",
+    "        daily_return=(df['Close'].pct_change() * 100).round(2),\n",
+    "        monthly_return=(df['Close'].pct_change(30) * 100).round(2),\n",
+    "        adv20=df[\"Volume\"].rolling(20).mean(),\n",
+    "        VWAP=(df['Volume'] * df['Close']).cumsum() / df['Volume'].cumsum()\n",
+    "    )\n",
+    "    # Add in log returns\n",
+    "    df['log_returns'] = np.log(df['Close']) - np.log(df['Close'].shift(1))\n",
+    "\n",
+    "    # add in monthly volatility\n",
+    "    df['volatility_30'] = df['log_returns'].rolling(30).std() * np.sqrt(30)\n",
+    "    df['volatility_60'] = df['log_returns'].rolling(60).std() * np.sqrt(60)\n",
+    "    df['annual_volatility'] = df['log_returns'].rolling(\n",
+    "        252).std() * np.sqrt(252)\n",
+    "\n",
+    "    # add in change in monthly vriation rapp\n",
+    "    df[\"rapp\"] = df[\"Close\"].shift(-21).divide(df[\"Close\"])\n",
+    "    df.dropna(inplace=True)\n",
+    "    \n",
+    "    df.to_csv(f\"{ticker}_30years.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_new_data(ticker, startdate=datetime.datetime(1993, 1, 1),\n",
+    "                       enddate=datetime.datetime(2023, 1, 1)):\n",
+    "\n",
+    "    GetData = yf.download(ticker, start=startdate, end=enddate)\n",
+    "    df = pd.DataFrame(GetData)\n",
+    "    df.index = df.index.strftime('%Y-%m-%d')\n",
+    "    df = df.sort_index()\n",
+    "\n",
+    "    # Build Columns\n",
+    "    df = df.assign(\n",
+    "        SMA_5=df['Close'].rolling(5).mean(),\n",
+    "        SMA_20=df['Close'].rolling(20).mean(),\n",
+    "        SMA_50=df['Close'].rolling(50).mean(),\n",
+    "        SMA_252=df['Close'].rolling(252).mean(),\n",
+    "        daily_return=(df['Close'].pct_change() * 100).round(2),\n",
+    "        monthly_return=(df['Close'].pct_change(30) * 100).round(2),\n",
+    "        adv20=df[\"Volume\"].rolling(20).mean(),\n",
+    "        VWAP=(df['Volume'] * df['Close']).cumsum() / df['Volume'].cumsum()\n",
+    "    )\n",
+    "    # Add in log returns\n",
+    "    df['log_returns'] = np.log(df['Close']) - np.log(df['Close'].shift(1))\n",
+    "\n",
+    "    # add in monthly volatility\n",
+    "    df['volatility_30'] = df['log_returns'].rolling(30).std() * np.sqrt(30)\n",
+    "    df['volatility_60'] = df['log_returns'].rolling(60).std() * np.sqrt(60)\n",
+    "    df['annual_volatility'] = df['log_returns'].rolling(\n",
+    "        252).std() * np.sqrt(252)\n",
+    "\n",
+    "    # add in change in monthly vriation rapp\n",
+    "    df[\"rapp\"] = df[\"Close\"].shift(-21).divide(df[\"Close\"])\n",
+    "    df.dropna(inplace=True)\n",
+    "\n",
+    "    df.to_csv(f\"{ticker}_30years.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_training_data(\"AAPL\")\n",
+    "load_training_data(\"GOOG\")\n",
+    "load_training_data(\"MSFT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "ticker = \"MSFT\"\n",
+    "GetData = yf.download(ticker, start=datetime.datetime(2023, 1, 1))\n",
+    "df = pd.DataFrame(GetData)\n",
+    "df.index = df.index.strftime('%Y-%m-%d')\n",
+    "df = df.sort_index()\n",
+    "df.to_csv(f\"{ticker}_input.csv\")"
    ]
   },
   {
